--- a/app/styles/login.module.css
+++ b/app/styles/login.module.css
@@ -17,6 +17,32 @@
     margin-top: 12px;
 }
 
+.Link_area {
+    margin-top: 10px;
+    text-align: right;
+}
+
+.Link_area a {
+    color: #333;
+    font-size: 13px;
+}
+
+.Link_area a ~ a {
+    position: relative;
+    margin-left: 6px;
+    padding-left: 6px;
+}
+
+.Link_area a ~ a::before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 5px;
+    width: 1px;
+    height: 10px;
+    background: #333;
+}
 
 .btn_area {
     margin-top: 30px;
