--- a/app/styles/join.module.css
+++ b/app/styles/join.module.css
@@ -27,6 +27,14 @@
 .join_wrap ul li {
     display: flex;
     padding: 10px 20px;
+    flex-wrap: wrap;
+}
+
+.errors {
+    width: 100%;
+    margin-top: 10px;
+    padding-left: 140px;
+    color: red;
 }
 
 .join_wrap ul li label {
