--- a/app/styles/reset.css
+++ b/app/styles/reset.css
@@ -188,6 +188,10 @@ body.fix main {position:fixed; width:100%; height:100%}
 
 .main_inner {width: 1050px; margin: 0px auto;}
 
+.swiper-slide img {
+	width: 100%;
+}
+
 .swiper-prev,
 .swiper-next {
 	opacity: 0;
