--- a/app/styles/search.module.css
+++ b/app/styles/search.module.css
@@ -1,3 +1,23 @@
+.search_wrap {
+    width: 783px;
+    margin: 0 auto;
+}
+
+.search_wrap ul {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    margin-top: 20px;
+    margin-left: -15px;
+    margin-top: 5px;
+}
+
+.search_wrap ul li {
+    width: calc(100% / 4 - 15px);
+    margin-left: 15px;
+    margin-top: 15px;
+}
+
 .result {
     margin: 50px 0;
     text-align: center;
@@ -7,4 +27,12 @@
 
 .result strong {
     color: #5f0080;
+}
+
+.no_data {
+    font-size: 16px;
+    color: #b5b5b5;
+    text-align: center;
+    padding: 60px 0 30px;
+    line-height: 1.6;
 }
