회원정보 수정
회원정보 수정

--- a/app/styles/join.module.css
+++ b/app/styles/join.module.css
@@ -74,3 +74,13 @@
 .btn_area button ~ button {
     margin-left: 10px;
 }
+
+.out_area {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.out_area button {
+    width: 240px;
+}
