--- a/app/styles/reset.css
+++ b/app/styles/reset.css
@@ -207,3 +207,16 @@ body.fix main {position:fixed; width:100%; height:100%}
 	width: 800px;
 	margin: 30px auto 0;
 }
+
+
+.loading_wrap {
+	position: fixed;
+	left:0;
+	top:0;
+	display: flex;
+	justify-content: center;
+	color: #fff;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.3);
+}
