--- a/app/styles/reset.css
+++ b/app/styles/reset.css
@@ -214,6 +214,7 @@ body.fix main {position:fixed; width:100%; height:100%}
 	left:0;
 	top:0;
 	display: flex;
+	align-items: center;
 	justify-content: center;
 	color: #fff;
 	width: 100%;
