--- a/app/styles/reset.css
+++ b/app/styles/reset.css
@@ -221,3 +221,9 @@ body.fix main {position:fixed; width:100%; height:100%}
 	height: 100%;
 	background-color: rgba(0,0,0,0.3);
 }
+
+
+.loading_wrap svg path,
+.loading_wrap svg rect{
+	fill: #5f0080;
+}
