--- a/app/styles/goods-detail.module.css
+++ b/app/styles/goods-detail.module.css
@@ -136,6 +136,113 @@
 }
 
 .review_area li {
+    display: flex;
+    position: relative;
     padding: 30px 0px 19px 20px;
     border-bottom: 1px solid #f4f4f4
+}
+
+.review_area li > div:first-child {
+    display: flex;
+    align-items: baseline;
+    width: 225px;
+}
+
+.review_area li > div {
+    width: calc(100% - 225px);
+}
+
+.detail_text_area strong {
+    font-family: 'ns';
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 19px;
+    color: #999;
+    display: -webkit-box;
+    overflow: hidden;
+    word-break: break-all;
+    white-space: normal;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
+
+.detail_text_area p {
+    padding-top: 12px;
+    padding-right: 20px;
+    word-break: break-word;
+    white-space: pre-wrap;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 19px;
+    color: #333;
+}
+
+.detail_img_area {
+    margin-top: 10px;
+}
+
+.date {
+    color: #999;
+    font-size: 14px;
+    padding-top: 20px;
+    padding-right: 20px;
+}
+
+.label {
+    display: inline-block;
+    height: 18px;
+    border: 1px solid #5f0080;
+    border-radius: 3px;
+    padding: 3px 4px 3px 5px;
+    margin-right: 4px;
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 10px;
+    text-align: center;
+    word-break: keep-all;
+    color: #5f0080;
+}
+
+.label.members {
+    color: #fff;
+    background-color: #4dbed7;
+    border-color:#4dbed7;
+}
+
+.label.best {
+    color: blue;
+    color: #fff;
+    background-color: #5f0080;
+}
+
+.name {
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.good_btn {
+    position: absolute;
+    right:20px;
+    bottom:13px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 88px;
+    height: 32px;
+    padding: 0px 13px 0px 11px;
+    border: 1px solid #e2e2e2;
+    border-radius: 20px;
+    font-size: 12px;
+    line-height: 20px;
+    color: #999;
+}
+
+.good_btn span {
+    margin-left: 3px;
+}
+
+.good_btn:hover,
+.good_btn.active {
+    color: #5f0080;
+    border-color: #5f0080;
 }
